pages/assets/css/basic.css
/* ... */
.blue-border {
    border: 2px solid var(--pg-brand-color);
}
.white-border {
    border-color: white;
}
@media (max-width: 991px) {
    .navbar-expand-lg > .container, .navbar-expand-lg > .container-fluid {
        padding-right: 0;
        padding-left: 0;
    }
}

/* Composition */

.page-section {
    margin-top: 3rem;
    padding: 9em 0;
    position: relative;
    display: block;
}
.full-height {
    position: relative;
    text-align: center;
}
.full-height > .container {
    position: relative;
}
.hero.full-height {
    min-height: calc(100vh - 6em);
    padding-top: 6em;
}
.hero.full-height > .container,
.hero.full-height > .container > .row {
    min-height: calc(100vh - 6em);
}
@media (max-width: 767px) {
    .full-height > .container > .row {
        height: inherit;
    }
}

@media (max-width: 991px) {
    .page-section {
        padding: 4em 0;
    }
}

/* Utilities */

.header-border-top {
    position: relative;
    padding-top: 30px;
    text-align: center;
}
.header-border-top::before {
    position: absolute;
    top: 0;
    height: 2px;
    width: 50px;
    content: "";
    background: #1d82ff;
    left: 50%;
    transform: translateX(-50%);
}
.header-border-bottom {
    position: relative;
    padding-bottom: 30px;
    text-align: center;
}
.header-border-bottom::before {
    position: absolute;
    bottom: 0;
    height: 2px;
    width: 50px;
    content: "";
    background: #1d82ff;
    left: 50%;
    transform: translateX(-50%);
}
.cover, .cover-small {
    background-size: cover;
    background-repeat: no-repeat;
}
.contain {
    background-size: contain;
    background-repeat: no-repeat;
}
.bg-center {
    background-position: center center;
}
.bg-top {
    background-position: top;
}
.hero .heading {
    font-size: 62px;
    color: white;
    margin-top: 20px;
    margin-bottom: 0;
    text-transform: uppercase;
    font-family: 'Bebas Kai';
}
.hero .sub-heading {
    font-size: 20px;
    max-width: 600px;
    margin: 0 auto;
    margin-bottom: 50px;
    text-transform: uppercase;
    font-family: 'Bebas Kai';
}
.heading__logo {
    font-size: 170px;
}
.cover-small {
    padding: 3em 0;
    height: inherit;
}
.cover-small > .container > .row {
    padding: 3em 0;
    height: inherit;
}
.cover-black {
    position: relative;
}
.cover-black::before {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    content: "";

    background: var(--pg-brand-color);
    opacity: 0.7;
}
@media (max-width: 767px) {
    .cover-small {
        padding: 3em 0;
        height: inherit;
    }
    .contain > .container > .row,
    .cover > .container > .row {
        height: inherit;
    }
    .cover-small > .container > .row {
        padding: 3em 0;
        height: inherit;
    }
    .hero .heading {
        font-size: 62px;
    }
    .hero .sub-heading {
        font-size: 32px;
    }
}
.carousel-control-prev,
.carousel-control-next {
    opacity: 1;
}
.images {
  position: relative;
}
.images .img2 {
    position: absolute;
    top: 50%;
    left: 50%;
    max-width: 500px;
    -webkit-box-shadow: -17px 10px 34px -18px rgba(0, 0, 0, 0.5);
    box-shadow: -17px 10px 34px -18px rgba(0, 0, 0, 0.5);
}
@media (max-width: 767px) {
    .images .img2 {
        position: relative;
        left: inherit !important;
        top: inherit !important;
        max-width: 100%;
    }
}
.images.right .img1 {
    position: relative;
    z-index: 2;
    -webkit-box-shadow: -17px 10px 34px -18px rgba(0, 0, 0, 0.5);
    box-shadow: -17px 10px 34px -18px rgba(0, 0, 0, 0.5);
}
.images.right .img2 {
    position: absolute;
    top: 50%;
    left: -40%;
    z-index: 1;
    max-width: 500px;
}
@media (max-width: 767px) {
    .images.right .img2 {
        position: relative;
        left: inherit !important;
        top: inherit !important;
        max-width: 100%;
    }
}

.icon-circle {
    position: relative;
    width: 80px;
    min-width: 80px;
    height: 80px;
    margin: 0 auto 1.5rem;

    border-radius: 50%;
    border: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);
}
.icon-circle i {
    position: absolute;
    top: 50%;
    left: 50%;
    -webkit-transform: translateY(-50%) translateX(-50%);
    -ms-transform: translateY(-50%) translateX(-50%);
    transform: translate(-50%, -50%);
}

.faq__item {
    display: flex;
    margin-bottom: 3em;
}
.faq__item > *:first-child {
    flex-shrink: 0;
    margin-right: 1rem;
}
.faq__item > * + * {
    flex-grow: 1;
}
.faq__item h3 {
    font-size: 17px;
    margin-top: 0;
}

.flow > * + * {
    margin-top: 4rem;
}
.flow-small > * + * {
    margin-top: 2rem;
}

/* Page styles */
.pg-accordion__toggle {
    display: block;
    border-bottom: 1px solid #e9ecef;
    padding: 10px 0;
    position: relative;
    color: #495057;
    text-transform: uppercase;
    font-size: 18px;
}
.pg-accordion__toggle[aria-expanded="true"] {
    color: #1d82ff;
    border-bottom: 1px solid transparent;
}
.pg-accordion__toggle::after {
    position: absolute;
    right: 0;
    top: 50%;
    -webkit-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
    font-family: 'Ionicons';
    font-style: normal;
    font-weight: normal;
    font-variant: normal;
    text-transform: none;
    line-height: 1;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    content: "\f2c7";
}
.pg-accordion__toggle[aria-expanded="true"]::after {
    content: "\f2f4";
}
.stats-header {
    padding: 3em 0;
}
.stats-header__title {
    font-size: 62px;
    margin: 1rem 0;
    color:#212529;
}
.stats-header__subtitle {
    font-size: 30px;
    margin-top: 0;
}
.stats-info {
    margin-bottom: 1rem;
    text-align: center;
}
.stats-info__title {
    margin-top: 0;
    font-size: 45px;
}
.stats-info__subtitle {
    margin-top: 0;
    font-size: 20px;
}

.pg-footer {
    padding: 5em 0;
}
.footer__copyright {
    padding-top: 5rem;
}
/* ... */

